--- a/4task/4.html
+++ b/4task/4.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=V, initial-scale=1.0">
+    <link rel="stylesheet" href="/4task/4.css">
     <title>Document</title>
 </head>
 <body>
